docs: update links in self-hosted documentation for consistency and clarity

--- a/docs/self-hosted/docker-compose.mdx
+++ b/docs/self-hosted/docker-compose.mdx
@@ -13,7 +13,7 @@ import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 Deploy DeployStack using Docker Compose for a production-ready, self-hosted installation. This method is recommended for most users as it provides a reliable, scalable setup with minimal configuration.
 
 <Callout type="info">
-  Docker containers are for production hosting or self-hosting. For development contributions, check the [Local Setup](/deploystack/local-setup) guide.
+  Docker containers are for production hosting or self-hosting. For development contributions, check the [Local Setup](/local-setup) guide.
 </Callout>
 
 ## Overview
@@ -293,7 +293,7 @@ docker stats
 
 If you encounter issues not covered here:
 
-1. Check the [Troubleshooting](/deploystack/troubleshooting) guide
+1. Check the [Troubleshooting](/troubleshooting) guide
 2. Search existing [GitHub Issues](https://github.com/deploystackio/deploystack/issues)
 3. Join our [Discord community](https://discord.gg/UjFWwByB)
 4. Create a new issue with detailed logs and system information
@@ -309,4 +309,4 @@ Once DeployStack is running:
 
 ---
 
-**Need to upgrade?** Check our [Upgrade Guide](/deploystack/self-hosted/upgrade-guide) for step-by-step instructions.
+**Need to upgrade?** Check our [Upgrade Guide](/self-hosted/upgrade-guide) for step-by-step instructions.
