--- a/docs/self-hosted/index.mdx
+++ b/docs/self-hosted/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Self-Hosted DeployStack
 description: Deploy and manage DeployStack on your own infrastructure with complete control and customization.
-sidebar: Self-Hosted
+sidebar: Self-Hosted Quickstart
 icon: Server
 ---
 
@@ -17,7 +17,7 @@ Run DeployStack on your own infrastructure for maximum control, security, and cu
 <Cards>
   <Card 
     icon={<Server />} 
-    href="/deploystack/self-hosted/docker-compose" 
+    href="/self-hosted/docker-compose" 
     title="Docker Compose Setup"
   >
     Quick and easy deployment using Docker Compose - recommended for most users
@@ -25,7 +25,7 @@ Run DeployStack on your own infrastructure for maximum control, security, and cu
   
   <Card 
     icon={<Settings />} 
-    href="/deploystack/self-hosted/setup" 
+    href="/self-hosted/setup" 
     title="Advanced Setup"
   >
     Manual installation and configuration for custom environments
@@ -37,7 +37,7 @@ Run DeployStack on your own infrastructure for maximum control, security, and cu
 <Cards>
   <Card 
     icon={<ArrowUp />} 
-    href="/deploystack/self-hosted/upgrade-guide" 
+    href="/self-hosted/upgrade-guide" 
     title="Upgrade Guide"
   >
     Keep your DeployStack instance up-to-date with the latest features and security patches
@@ -45,7 +45,7 @@ Run DeployStack on your own infrastructure for maximum control, security, and cu
   
   <Card 
     icon={<Wrench />} 
-    href="/deploystack/troubleshooting" 
+    href="/troubleshooting" 
     title="Troubleshooting"
   >
     Common issues and solutions for self-hosted deployments
@@ -85,7 +85,7 @@ Run DeployStack on your own infrastructure for maximum control, security, and cu
 
 ## Getting Started
 
-1. **Choose Your Deployment Method**: Start with [Docker Compose](/deploystack/self-hosted/docker-compose) for the quickest setup
+1. **Choose Your Deployment Method**: Start with [Docker Compose](/self-hosted/docker-compose) for the quickest setup
 2. **Configure Environment**: Set up your environment variables and secrets
 3. **Deploy Services**: Launch your DeployStack instance
 4. **Access Interface**: Connect to your self-hosted DeployStack at your configured URL
@@ -100,4 +100,4 @@ Need help with your self-hosted deployment?
 
 ---
 
-**Ready to deploy?** Start with our [Docker Compose guide](/deploystack/self-hosted/docker-compose) for the fastest setup experience.
+**Ready to deploy?** Start with our [Docker Compose guide](/self-hosted/docker-compose) for the fastest setup experience.
