docs: update links in documentation for consistency and clarity

--- a/docs/development/backend/environment-variables.mdx
+++ b/docs/development/backend/environment-variables.mdx
@@ -433,7 +433,7 @@ docker exec -it container-name printenv NODE_ENV
 
 ## Related Documentation
 
-- [Backend Development Guide](/deploystack/development/backend) - Main backend development guide
-- [Database Configuration](/deploystack/development/backend/database) - Database setup and configuration
-- [API Documentation](/deploystack/development/backend/api) - API development guide
-- [Deploy DeployStack](/deploystack/self-hosted/docker-compose) - Deploy DeployStack with Docker Compose
+- [Backend Development Guide](/development/backend) - Main backend development guide
+- [Database Configuration](/development/backend/database) - Database setup and configuration
+- [API Documentation](/development/backend/api) - API development guide
+- [Deploy DeployStack](/self-hosted/docker-compose) - Deploy DeployStack with Docker Compose
