--- a/docs/development/frontend/environment-variables.mdx
+++ b/docs/development/frontend/environment-variables.mdx
@@ -382,5 +382,5 @@ validateEnvironment()
 
 ## Related Documentation
 
-- [Frontend Development Guide](/deploystack/development/frontend) - Main frontend development guide
-- [Deploy DeployStack](/deploystack/self-hosted/docker-compose) - Deploy DeployStack with Docker Compose
+- [Frontend Development Guide](/development/frontend) - Main frontend development guide
+- [Deploy DeployStack](/self-hosted/docker-compose) - Deploy DeployStack with Docker Compose
