--- a/docs/local-setup.mdx
+++ b/docs/local-setup.mdx
@@ -11,10 +11,10 @@ import { Steps, Step } from 'fumadocs-ui/components/steps';
 
 # Local Development Setup
 
-This guide is for contributors and developers who want to run DeployStack locally for development purposes. If you want to deploy DeployStack for production use, see our [Self-Hosted Documentation](/deploystack/self-hosted).
+This guide is for contributors and developers who want to run DeployStack locally for development purposes. If you want to deploy DeployStack for production use, see our [Self-Hosted Documentation](/self-hosted).
 
 <Callout type="info">
-  For production deployments, use our [Docker Compose setup](/deploystack/self-hosted/docker-compose) instead.
+  For production deployments, use our [Docker Compose setup](/self-hosted/docker-compose) instead.
 </Callout>
 
 ## Prerequisites
