--- a/docs/mcp-catalog.mdx
+++ b/docs/mcp-catalog.mdx
@@ -40,7 +40,7 @@ The catalog supports two types of servers:
 
 Servers are organized into categories for easy discovery and filtering. Categories are simple organizational labels that group servers by their purpose or functionality.
 
-For a complete explanation of how MCP categories work, see the [MCP Categories Guide](/deploystack/mcp-categories).
+For a complete explanation of how MCP categories work, see the [MCP Categories Guide](/mcp-categories).
 
 **Note**: Only Global Administrators can create and manage categories.
 
