--- a/docs/quick-start.mdx
+++ b/docs/quick-start.mdx
@@ -312,10 +312,10 @@ If you need assistance:
 
 ### Learn More
 
-- **[Self-Hosted Documentation](/deploystack/self-hosted)**: Comprehensive deployment guides
-- **[Local Development](/deploystack/local-setup)**: Set up development environment
-- **[Global Settings](/deploystack/global-settings)**: Configure email, auth, and more
-- **[User Roles](/deploystack/roles)**: Manage team permissions
+- **[Self-Hosted Documentation](/self-hosted)**: Comprehensive deployment guides
+- **[Local Development](/local-setup)**: Set up development environment
+- **[Global Settings](/global-settings)**: Configure email, auth, and more
+- **[User Roles](/roles)**: Manage team permissions
 
 ### Deploy MCP Servers
 
