--- a/docs/self-hosted/setup.mdx
+++ b/docs/self-hosted/setup.mdx
@@ -398,4 +398,4 @@ Configure different settings for different environments:
 
 ---
 
-**Next Steps**: After completing platform setup, configure [user roles and permissions](/deploystack/roles) and set up your first [team workspaces](/deploystack/teams).
+**Next Steps**: After completing platform setup, configure [user roles and permissions](/roles) and set up your first [team workspaces](/teams).
