docs: restructure documentation by removing outdated meta.json files and updating API security titles for clarity

--- a/docs/development/backend/api-security.mdx
+++ b/docs/development/backend/api-security.mdx
@@ -1,9 +1,9 @@
 ---
-title: API Security Best Practices
+title: API Security
 description: Essential security patterns for DeployStack Backend API development, including proper authorization hook usage and security-first development principles.
 ---
 
-# API Security Best Practices
+# API Security
 
 This document outlines critical security patterns and best practices for developing secure APIs in the DeployStack Backend. Following these guidelines ensures consistent security behavior and prevents common vulnerabilities.
 
