--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -17,7 +17,7 @@ DeployStack is the **Enterprise Control Plane for the Model Context Protocol (MC
 <Cards>
   <Card 
     icon={<Terminal />} 
-    href="quick-start" 
+    href="/quick-start" 
     title="DeployStack Quick Start"
   >
     Get started with DeployStack in minutes. Set up your first MCP server and connect to the DeployStack Gateway.
@@ -25,7 +25,7 @@ DeployStack is the **Enterprise Control Plane for the Model Context Protocol (MC
 
   <Card 
     icon={<Users />} 
-    href="onboard-new-team-members" 
+    href="/onboard-new-team-members" 
     title="Onboard New Team Members"
   >
     Learn how to onboard new developers to your DeployStack team and manage their access
@@ -33,7 +33,7 @@ DeployStack is the **Enterprise Control Plane for the Model Context Protocol (MC
 
   <Card 
     icon={<Server />} 
-    href="/self-hosted" 
+    href="/self-hosted/" 
     title="Self-Hosted DeployStack"
     external
   >
@@ -42,7 +42,7 @@ DeployStack is the **Enterprise Control Plane for the Model Context Protocol (MC
   
   <Card 
     icon={<Shield />} 
-    href="/deploystack/security" 
+    href="/security" 
     title="Security & Governance"
   >
     Understand how DeployStack eliminates credential sprawl and provides enterprise security
