docs: update documentation links for consistency and clarity; remove unnecessary file extensions

--- a/docs/development/index.mdx
+++ b/docs/development/index.mdx
@@ -26,7 +26,7 @@ DeployStack implements a sophisticated Control Plane / Data Plane architecture f
 <Cards>
   <Card 
     icon={<Code2 />} 
-    href="/deploystack/development/frontend" 
+    href="/development/frontend" 
     title="Frontend Development"
   >
     Vue 3 web application with TypeScript, Vite, and shadcn-vue components. Direct fetch API patterns, SFC components, and internationalization.
@@ -34,7 +34,7 @@ DeployStack implements a sophisticated Control Plane / Data Plane architecture f
   
   <Card 
     icon={<Server />} 
-    href="/deploystack/development/backend" 
+    href="/development/backend" 
     title="Backend Development"
   >
     Fastify cloud control plane with Drizzle ORM, plugin architecture, role-based access control, and OpenAPI documentation generation.
@@ -42,7 +42,7 @@ DeployStack implements a sophisticated Control Plane / Data Plane architecture f
   
   <Card 
     icon={<Shield />} 
-    href="/deploystack/development/gateway" 
+    href="/development/gateway" 
     title="Gateway Development"
   >
     Local secure proxy managing MCP server processes, credential injection, dual transport protocols (stdio/SSE), and team-based access control.
