docs: update links in GitHub OAuth and Quick Start documentation for consistency and clarity

--- a/docs/development/backend/api-security.mdx
+++ b/docs/development/backend/api-security.mdx
@@ -179,7 +179,7 @@ fastify.get('/dual-auth-endpoint', {
 });
 ```
 
-For detailed OAuth2 implementation, see the [OAuth Implementation Guide](./oauth.mdx) and [Security Policy](./security.mdx#oauth2-server-security).
+For detailed OAuth2 implementation, see the [Backend OAuth Implementation Guide](/development/backend/oauth) and [Backend Security Policy](/development/backend/security#oauth2-server-security).
 
 ### Team-Aware Permission System
 
@@ -485,5 +485,5 @@ Before deploying any protected endpoint, verify:
 ## Related Documentation
 
 - [API Documentation Generation](/development/backend/api) - General API development patterns
-- [Authentication System](deploystack/auth) - User authentication implementation
+- [Authentication System](/development/backend/auth) - User authentication implementation
 - [Role-Based Access Control](/development/backend/roles) - Permission system details
