--- a/docs/development/backend/api.mdx
+++ b/docs/development/backend/api.mdx
@@ -17,7 +17,7 @@ The DeployStack Backend uses Fastify with Swagger plugins to automatically gener
 
 ## 🔒 Security First
 
-**IMPORTANT**: Before developing any protected API endpoints, read the [API Security Best Practices](./api-security.mdx) documentation. It covers critical security patterns including:
+**IMPORTANT**: Before developing any protected API endpoints, read the [API Security Best Practices](/development/backend/api-security) documentation. It covers critical security patterns including:
 
 - **Authorization Before Validation**: Why `preValidation` must be used instead of `preHandler` for authorization
 - **Proper Error Responses**: Ensuring unauthorized users get 403 Forbidden, not validation errors
