--- a/docs/development/backend/oauth.mdx
+++ b/docs/development/backend/oauth.mdx
@@ -28,7 +28,7 @@ For programmatic API access by CLI tools and applications:
 
 The OAuth2 server enables CLI tools and applications to access DeployStack APIs securely using Bearer tokens.
 
-For OAuth2 security details including PKCE, token security, authorization flow security, and Bearer token authentication, see the [Security Policy](./security.mdx#oauth2-server-security).
+For OAuth2 security details including PKCE, token security, authorization flow security, and Bearer token authentication, see the [Security Policy](/development/backend/security#oauth2-server-security).
 
 ### Database Schema
 
