--- a/docs/development/backend/roles.mdx
+++ b/docs/development/backend/roles.mdx
@@ -106,7 +106,7 @@ fastify.post('/teams/:teamId/resources', {
 }, handler);
 ```
 
-See [API Security Best Practices](./api-security.mdx) for detailed information about team-aware permissions and security patterns.
+See [API Security Best Practices](/development/backend/api-security) for detailed information about team-aware permissions and security patterns.
 
 ### Programmatic Checks
 
