--- a/docs/development/backend/security.mdx
+++ b/docs/development/backend/security.mdx
@@ -105,7 +105,7 @@ The OAuth2 server implementation follows RFC 6749 and RFC 7636 security standard
 - **Scope Enforcement:** Middleware validates required scopes per endpoint
 - **Dual Authentication:** Seamless support for both cookies and Bearer tokens
 
-For implementation details, see the [OAuth Implementation Guide](./oauth.mdx).
+For implementation details, see the [Backend OAuth Implementation Guide](/development/backend/oauth).
 
 ## Dependencies
 
