--- a/docs/development/backend/test.mdx
+++ b/docs/development/backend/test.mdx
@@ -133,7 +133,7 @@ console.log('User created:', user);
 server.log.info('User created', { userId: user.id });
 ```
 
-See the [Backend Logging Guide](./logging.mdx) for complete logging best practices.
+See the [Backend Logging Guide](/development/backend/logging) for complete logging best practices.
 
 ## Writing New Tests
 
