--- a/docs/development/gateway/oauth.mdx
+++ b/docs/development/gateway/oauth.mdx
@@ -190,7 +190,7 @@ The OAuth client adapts to different environments:
 
 ## Integration with Backend
 
-The gateway OAuth client integrates with the [backend OAuth2 server](../backend/oauth.mdx#oauth2-server-implementation):
+The gateway OAuth client integrates with the [backend OAuth2 server](/development/backend/oauth#oauth2-server-implementation):
 
 - **Client Registration**: Pre-registered with known client ID
 - **PKCE Support**: Uses SHA256 method as required by backend
@@ -210,7 +210,7 @@ The OAuth implementation follows security best practices:
 - **Secure Storage**: Credentials stored using OS keychain
 - **No Secrets**: Public client design eliminates secret management
 
-For detailed security implementation including credential storage, token expiration, and local file security, see the [Gateway Security Guide](./security.mdx).
+For detailed security implementation including credential storage, token expiration, and local file security, see the [Gateway Security Guide](/development/gateway/security).
 
 ## Testing OAuth Flow
 
