--- a/docs/development/gateway/process-management.mdx
+++ b/docs/development/gateway/process-management.mdx
@@ -175,9 +175,9 @@ When failures are detected, the Gateway implements:
 
 The process management system integrates with other Gateway components:
 
-- **[MCP Configuration Management](./mcp)**: Uses team configurations to determine spawn parameters
-- **[Caching System](./caching-system)**: Coordinates with tool discovery and caching mechanisms
-- **[Project Structure](./structure)**: Implements the architecture defined in the core modules
+- **[MCP Configuration Management](/development/gateway/mcp)**: Uses team configurations to determine spawn parameters
+- **[Caching System](/development/gateway/caching-system)**: Coordinates with tool discovery and caching mechanisms
+- **[Project Structure](/development/gateway/structure)**: Implements the architecture defined in the core modules
 - **HTTP Proxy Server**: Provides process information for request routing decisions
 
 ## Monitoring and Observability
