--- a/docs/development/gateway/security.mdx
+++ b/docs/development/gateway/security.mdx
@@ -331,7 +331,7 @@ The CLI provides appropriate security warnings:
 - Validate all user inputs
 - Implement proper resource management
 
-For OAuth2 flow details and implementation specifics, see the [Gateway OAuth Guide](./oauth.mdx).
+For OAuth2 flow details and implementation specifics, see the [Gateway OAuth Guide](/development/gateway/oauth).
 
 ## Security Auditing
 
