--- a/docs/development/gateway/structure.mdx
+++ b/docs/development/gateway/structure.mdx
@@ -140,7 +140,7 @@ export function registerLoginCommand(program: Command) {
 - Raw API data storage and processed config generation
 - Secure credential injection and environment variable management
 - MCP server tool discovery and capability exploration
-- Team-aware tool caching system as detailed in [Caching System](./caching-system)
+- Team-aware tool caching system as detailed in [Caching System](/development/gateway/caching-system)
 - Installation method processing for correct server spawning
 
 **utils/**: Shared utilities and centralized services
