--- a/docs/development/gateway/teams.mdx
+++ b/docs/development/gateway/teams.mdx
@@ -70,7 +70,7 @@ All MCP-related CLI operations operate within the selected team context:
 - **Configuration Sync**: Gateway downloads only selected team's configurations
 - **Process Management**: Spawned MCP processes use team-scoped credentials
 
-> **MCP Configuration Management**: For detailed information about how the Gateway downloads, processes, and stores MCP server configurations from the backend API, see the [Gateway MCP Configuration documentation](./mcp.mdx).
+> **MCP Configuration Management**: For detailed information about how the Gateway downloads, processes, and stores MCP server configurations from the backend API, see the [Gateway MCP Configuration documentation](/development/gateway/mcp).
 
 ### Cross-Team Isolation
 
@@ -126,7 +126,7 @@ The team context system is designed to support:
 - Role-based access to different tool sets
 - Enterprise governance and audit trails
 
-For comprehensive team management information, see the [Teams documentation](../../teams.mdx).
+For complete team management information, see the [Teams documentation](/teams).
 
 ## Error Handling
 
