--- a/docs/mcp-catalog.mdx
+++ b/docs/mcp-catalog.mdx
@@ -161,7 +161,7 @@ The catalog supports comprehensive version tracking:
 
 ### GitHub Integration
 
-Seamless integration with GitHub repositories for automatic synchronization and metadata extraction. For complete details on setting up and using GitHub integration, see the [GitHub Integration Guide](./github-integration.mdx).
+Integration with GitHub repositories for automatic synchronization and metadata extraction. For complete details on setting up and using GitHub integration, see the [GitHub App Integration Guide](/github-application).
 
 **Key Features:**
 - **Automatic Repository Sync**: Pull server metadata from GitHub repositories
