--- a/docs/teams.mdx
+++ b/docs/teams.mdx
@@ -47,7 +47,7 @@ Teams serve as comprehensive containers for all your deployment resources:
 - **Global MCP Server Access**: Browse and deploy community-wide MCP servers
 - **Server Management**: Team administrators can create, edit, and delete team servers
 - **Version Control**: Track different versions of your team's MCP servers
-- **GitHub Integration**: Automatic synchronization with your team's repositories (see [GitHub Integration Guide](./github-integration.mdx))
+- **GitHub Integration**: Automatic synchronization with GitHub repositories (see [GitHub App Integration Guide](/github-application))
 - **Custom Configurations**: Team-specific server settings and parameters
 - **Deployment History**: Complete logs and monitoring data for team deployments
 
