--- a/docs/github-oauth-setup.mdx
+++ b/docs/github-oauth-setup.mdx
@@ -157,8 +157,7 @@ When a user logs in via GitHub, DeployStack stores:
 
 ## Related Documentation
 
-- [GitHub Application](/docs/github-application) - For repository data access and MCP server creation
-- [User Management](/docs/user-management) - Managing users and permissions
-- [Global Settings](/docs/global-settings) - Complete global settings reference
+- [GitHub Application](/github-application) - For repository data access and MCP server creation
+- [Global Settings](/global-settings) - Complete global settings reference
 
 GitHub OAuth provides a seamless authentication experience for your users while maintaining security and proper access control within DeployStack.
