Add OAuth Provider Implementation documentation and remove old OAuth guide
- Introduced a new document detailing the implementation of third-party OAuth providers for user authentication in DeployStack.
- Removed the outdated OAuth Implementation Guide to streamline documentation.
- Added a comprehensive guide for the OAuth2 server implementation, detailing authorization flows, token management, and security practices.
- Updated the index page to reflect the new documentation structure.

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -33,9 +33,8 @@ DeployStack is the **Enterprise Control Plane for the Model Context Protocol (MC
 
   <Card 
     icon={<Server />} 
-    href="/self-hosted/" 
+    href="/self-hosted" 
     title="Self-Hosted DeployStack"
-    external
   >
     Host DeployStack on your own infrastructure for complete control and security
   </Card>  
