fix: update links to OAuth implementation guides for consistency

--- a/docs/development/backend/oauth2-server.mdx
+++ b/docs/development/backend/oauth2-server.mdx
@@ -5,7 +5,7 @@ description: Developer guide for the OAuth2 authorization server that enables pr
 
 # OAuth2 Server Implementation
 
-This document describes the OAuth2 authorization server implementation in the DeployStack backend, which enables CLI tools and applications to access APIs using Bearer tokens. For general authentication, see [Backend Authentication System](/development/backend/auth). For OAuth provider integration (social login), see [GitHub OAuth Implementation](/development/backend/github-oauth).
+This document describes the OAuth2 authorization server implementation in the DeployStack backend, which enables CLI tools and applications to access APIs using Bearer tokens. For general authentication, see [Backend Authentication System](/development/backend/auth). For OAuth provider integration (social login), see [Providers OAuth Implementation](/development/backend/oauth-providers).
 
 ## Overview
 
