--- a/docs/development/gateway/oauth.mdx
+++ b/docs/development/gateway/oauth.mdx
@@ -190,7 +190,7 @@ The OAuth client adapts to different environments:
 
 ## Integration with Backend
 
-The gateway OAuth client integrates with the [backend OAuth2 server](/development/backend/oauth#oauth2-server-implementation):
+The gateway OAuth client integrates with the [backend OAuth2 server](/development/backend/oauth2-server):
 
 - **Client Registration**: Pre-registered with known client ID
 - **PKCE Support**: Uses SHA256 method as required by backend
